# trace-seq

./: .gitignore  README.md
core/: assumption_ontology.yaml  operation_ontology.yaml  trace_node.yaml
cpp/: CMakeLists.txt  README.md  bindings.cpp  cli.cpp  hashing.cpp  hashing.hpp  lineage.cpp  lineage.hpp  pybind11_json.hpp  tracer.cpp  tracer.hpp
docs/: concepts.md  ontology.md  reproducibility.md
examples/rnaseq/: raw_counts.tsv  run_pipeline.sh  run_real_data_pipeline.sh
python/: pyproject.toml
python/traceseq/: api.py
r/: DESCRIPTION  init.R  trace_annotate.R  trace_load.R  trace_ontology.R  trace_report.R  trace_validate.R
